--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                         
                         </ul>
                         <div class="content">
-                            <hi>Amaizing titl</hi>
+                            <h1>Amaizing titl</h1>
+                            <p>Lorem ipsum dolor sit amet consenctetur adipscing elit</p>
                             <p>Lorem ipsum dolor sit amet consenctetur adipscing elit</p>
                             <p>
                                 Lorem ipsum dolor sit amet consenctetur adipscing elit
